adding key binds

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div>
       <img class="typewriter" src="images/typewritter.png" alt="">
       <img class="horizontal2" src="images/horizontal2.png" alt="" />
+      <div class="typer"></div>
       <img class="horizontal" src="images/horizontal.png" alt="">
       <img class="after" src="images/after.png" alt="">
 
