removed 'block' + added spacebar behaviour

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <i class="key spacebar"></i>
 </div>
 
-  <div class="block"></div>
+  <!-- <div class="block"></div> -->
   <audio id="ding-sound" src="sounds/ding.wav"></audio>
 
 
