added shadow - removed typer

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
         type something...<br /><br />
       </p>
     </div>
+      <div class="shadow">
+
+      </div>
       <img class="typewriter" src="images/typewritter.png" alt="">
       <img class="horizontal2" src="images/horizontal2.png" alt="" />
-      <div class="typer"></div>
+      <!-- <div class="typer"></div> -->
       <img class="horizontal" src="images/horizontal.png" alt="">
       <img class="after" src="images/after.png" alt="">
 
@@ -64,7 +67,7 @@
 <i class="key spacebar"></i>
 </div>
 
-  <!-- <div class="block"></div> -->
+  <div class="block"></div>
   <audio id="ding-sound" src="sounds/ding.wav"></audio>
 
 
